--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"private": true,
 	"dependencies": {
 		"body-parser": "^1.19.0",
+
 		"config": "^3.3.6",
 		"connect-mongo": "^4.4.0",
 		"cookie-parser": "~1.4.5",
@@ -36,20 +37,21 @@
 		"@angular-devkit/build-angular": "^14.1.0",
 		"@angular/animations": "~14.1.0",
 		"@angular/cdk": " ^14.1.0",
+		"@angular/cli": "^14.1.0",
 		"@angular/common": "~14.1.0",
 		"@angular/compiler": "~14.1.0",
+		"@angular/compiler-cli": "~14.1.0",
 		"@angular/core": "~14.1.0",
 		"@angular/flex-layout": "^14.0.0-beta.40",
 		"@angular/forms": "~14.1.0",
+		"@angular/language-service": "~14.1.0",
 		"@angular/material": "^14.1.0",
 		"@angular/platform-browser": "~14.1.01",
 		"@angular/platform-browser-dynamic": "~14.1.0",
 		"@angular/router": "~14.1.0",
 		"@angular/service-worker": "~14.1.0",
-		"@angular/cli": "^14.1.0",
-		"@angular/compiler-cli": "~14.1.0",
-		"@angular/language-service": "~14.1.0",
 		"@types/node": "^18.6.2",
+		"codelyzer": "^6.0.2",
 		"gulp": "^4.0.2",
 		"gulp-sourcemaps": "^3.0.0",
 		"gulp-typescript": "^5.0.1",
